# mumblers

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
examples/: channel_connect.rs  channel_jumper.rs  channel_tree.rs  connect.rs  events.rs  events_tcp.rs  events_udp.rs  ping.rs  play_audio.rs  playback.rs  record.rs  send_text.rs  server_stub.rs
nix/: package.nix
nix/nixos-module/: mumblersd.nix
proto/: Mumble.proto
src/: audio.rs  channels.rs  connection.rs  error.rs  lib.rs  messages.rs  proto.rs  state.rs  udp.rs
src/connection/: config.rs  mod.rs
src/crypto/: mod.rs  ocb2.rs
src/server/: config.rs  conn.rs  mod.rs  state.rs  udp.rs
tests/: channels.rs  client_state_updates.rs  event_stream.rs  handshake.rs  integration_full.rs  integration_misc.rs  integration_voice.rs  ping_interval.rs  server_handshake.rs  server_state.rs  server_text.rs  server_udp.rs  tcp_desync.rs  udp.rs
tests/common/: mod.rs
