[package]
name = "mumblers"
version = "0.2.2"
edition = "2021"
license = "MIT"

[features]
default = []
audio = ["opus"]

[dependencies]
bytes = "1"
prost = "0.14"
prost-types = "0.14"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "macros", "sync", "signal"] }
tokio-rustls = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes = "0.8"
cipher = "0.4"
rand = "0.8"
opus = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rustls-pemfile = "2"
clap = { version = "4", features = ["derive"] }
rcgen = "0.12"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.1"

[dev-dependencies]
hound = "3"
tokio-rustls = "0.25"
rustls = "0.23"

[[example]]
name = "playback"
required-features = ["audio"]

[[example]]
name = "record"
required-features = ["audio"]

[[example]]
name = "connect"

[[example]]
name = "events_tcp"

[[example]]
name = "events_udp"

[[example]]
name = "ping"
