[package]
name = "mumblers"
version = "0.2.4"
edition = "2021"
license = "MIT"

[features]
default = ["server-bin"]
audio = ["opus"]
config = ["serde", "toml"]
server-bin = ["rcgen", "config"]

[dependencies]
bytes = "1"
prost = "0.14"
prost-types = "0.14"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "macros", "sync", "signal"] }
tokio-rustls = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes = "0.8"
cipher = "0.4"
rand = "0.8"
opus = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }
rustls-pemfile = "2"
clap = { version = "4", features = ["derive"] }
rcgen = { version = "0.12", optional = true }

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.1"

[[bin]]
name = "mumblersd"
required-features = ["server-bin"]

[dev-dependencies]
hound = "3"
tokio-rustls = "0.25"
rustls = "0.23"
rcgen = "0.12"

[[example]]
name = "playback"
required-features = ["audio"]

[[example]]
name = "record"
required-features = ["audio"]

[[example]]
name = "connect"

[[example]]
name = "events_tcp"

[[example]]
name = "events_udp"

[[example]]
name = "ping"

[[example]]
name = "server_stub"
required-features = ["server-bin"]
